--- a/catalog.html
+++ b/catalog.html
@@ -64,12 +64,7 @@
                     <a href="" class="header__choose-btn">
                         Выбрать квартиру
                     </a>
-                    <button class="header__burger">
-                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 1H20" stroke="white" />
-                            <path d="M0 9H20" stroke="white" />
-                        </svg>
-                    </button>
+                    <button class="header__burger"></button>
                 </div>
             </div>
         </div>
@@ -769,7 +764,7 @@
         </div>
     </section>
 
-    <footer>
+        <footer>
         <div class="container">
             <div class="footer__wrap">
                 <div class="footer__top">
@@ -875,10 +870,14 @@
                         </a>
                     </div>
                     <div class="footer__bottom_bottom">
-                        Вся предаставленная на сайте информация, касающаяся жилого комплекса, носит исключительно
-                        информационных характер, никакая информация, материалы, опубликованные на нем, н при каких
-                        условиях не являются публичной офертой, определяемой положениями статьи 437 Гражданского кодекса
-                        Российской Федерации. Визуализация и ланировки, представленные на настоящем сайте являются
+                        Вся предаставленная на сайте информация, касающаяся жилого комплекса, носит
+                        исключительно
+                        информационных характер, никакая информация, материалы, опубликованные на нем, н при
+                        каких
+                        условиях не являются публичной офертой, определяемой положениями статьи 437 Гражданского
+                        кодекса
+                        Российской Федерации. Визуализация и ланировки, представленные на настоящем сайте
+                        являются
                         ориентировочными
                     </div>
                 </div>
@@ -923,7 +922,8 @@
                     <div class="checkbox-item">
                         <input type="checkbox" class="checkbox-input" id="feedback-popup_policy"
                             name="feedback-popup_policy" value="feedback-popup_policy">
-                        <label for="feedback-popup_policy" class="checkbox-label">Я соглашаюсь на обработку персональных
+                        <label for="feedback-popup_policy" class="checkbox-label">Я соглашаюсь на обработку
+                            персональных
                             данных</label>
                     </div>
                     <button>
@@ -1243,7 +1243,8 @@
                             <div class="radio-item">
                                 <input type="radio" class="radio-input" id="popup-features-6" name="popup-features"
                                     value="Возможность установки камина">
-                                <label for="popup-features-6" class="radio-label">Возможность установки камина</label>
+                                <label for="popup-features-6" class="radio-label">Возможность установки
+                                    камина</label>
                             </div>
                             <div class="radio-item">
                                 <input type="radio" class="radio-input" id="popup-features-7" name="popup-features"
@@ -1276,8 +1277,35 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/app.js"></script>
+    <div class="mobile-menu">
+        <div class="mobile-menu__wrap">
+            <ul>
+                <li>
+                    <a href="">
+                        Квартиры
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        видеоматериалы
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        новости и акции
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        контакты
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="assets/js/animation.js"></script>
+    <script src="assets/js/app.js"></script>
+
 </body>
 
 </html>
