--- a/parking.html
+++ b/parking.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="">
     <header>
         <div class="container">
             <div class="header__wrap">
@@ -70,72 +70,132 @@
             </div>
         </div>
     </header>
-    <section class="state-page">
+    <section class="preloader">
         <div class="container">
-            <div class="state-page__wrap">
-                <div class="breadcrumb">
-                    <ul>
-                        <li>
-                            <a href="">
-                                Главная
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Новости и акции
-                            </a>
-                        </li>
-                        <li>
-                            IT ипотека в любом банке без комиссии
-                        </li>
-                    </ul>
-                </div>
-                <h1 class="state-page__title">
-                    IT ипотека в любом банке без комиссии
-                </h1>
-                <div class="state-page__main">
-                    <img src="assets/images/state.png" alt="">
-                    <div class="state-page__content">
-                        <p>
-                            Сотрудники IT-компаний сегодня могут воспользоваться льготной ипотечной программой со
-                            ставкой от 5%, предоставляемой в рамках государственной поддержки. Однако не все знают, что
-                            получить такую ипотеку можно не только в одном из крупных банков, но в любом банке,
-                            аккредитованном по этой программе.
-                        </p>
-                        <p>
-                            Ключевые преимущества:
-                        </p>
-                        <ul>
-                            <li>
-                                Без комиссии за сопровождение: оформление сделки без дополнительных сборов со стороны
-                                агентства.
-                            </li>
-                            <li>
-                                Выбор любого банка: не ограничиваем вас только партнёрскими банками — вы выбираете тот,
-                                который вам удобен.
-                            </li>
-                            <li>
-                                Полное сопровождение: от предварительной консультации до получения одобрения и выхода на
-                                сделку.
-                            </li>
-                            <li>
-                                Экспертиза в IT-ипотеке: знаем все нюансы и тонкости программы, помогаем ускорить
-                                процесс.
-                            </li>
-                        </ul>
-                        <p>
-                            Если вы работаете в сфере информационных технологий и хотите купить жильё с использованием
-                            льготной ипотеки — мы поможем реализовать это быстро и комфортно, без лишних затрат.
-                        </p>
-                    </div>
-                    <a href="" class="state-page__back">
-                        Назад
-                    </a>
+            <div class="preloader__wrap">
+                <img src="assets/images/preview_logo.svg" alt="">
+                <div class="preloader__percent" id="preloader-percent">
+                    0%
                 </div>
             </div>
         </div>
     </section>
-        <footer>
+    <section class="parking-page">
+        <div class="container">
+            <div class="parking-page__wrap">
+                <a href="" class="parking-page__back">
+                    Назад
+                </a>
+                <div class="parking-page__main">
+                    <div class="parking-page__info">
+                        <div class="parking-page__info__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" fill="white" />
+                                <rect x="0.5" y="0.5" width="31" height="31" stroke="black" stroke-opacity="0.1" />
+                            </svg>
+                            Доступо для покупки
+                        </div>
+                        <div class="parking-page__info__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" fill="#8B8D98" />
+                            </svg>
+                            Продана
+                        </div>
+                    </div>
+                    <div class="parking-page__info2">
+                        <div class="parking-page__info2__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" fill="#6B4D45" />
+                            </svg>
+                            Малое машиноместо
+                        </div>
+                        <div class="parking-page__info2__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" fill="#C1A984" />
+                            </svg>
+                            Стандартное машиноместо
+                        </div>
+                        <div class="parking-page__info2__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" fill="#263452" />
+                            </svg>
+                            Двойное семейное машиноместо
+                        </div>
+                        <div class="parking-page__info2__item">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_2663_3348)">
+                                    <rect width="32" height="32" fill="#C1A984" />
+                                    <path
+                                        d="M26.9852 36.5123C16.1141 36.5123 15.4957 43.8289 15.4957 43.8289C15.4957 43.8289 14.8825 36.5123 4.00622 36.5123C-6.87008 36.5123 -7 29.7412 -7 29.7412V31.5444C-7 31.5444 -6.86488 38.3155 4.00622 38.3155C14.8773 38.3155 15.4957 45.6321 15.4957 45.6321C15.4957 45.6321 16.1089 38.3155 26.9852 38.3155C37.8615 38.3155 37.9914 31.5444 37.9914 31.5444V29.7412C37.9914 29.7412 37.8563 36.5123 26.9852 36.5123Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 32.9527C16.1141 32.9527 15.4957 40.2694 15.4957 40.2694C15.4957 40.2694 14.8825 32.9527 4.00622 32.9527C-6.87008 32.9527 -7 26.1816 -7 26.1816V27.9848C-7 27.9848 -6.86488 34.7559 4.00622 34.7559C14.8773 34.7559 15.4957 42.0726 15.4957 42.0726C15.4957 42.0726 16.1089 34.7559 26.9852 34.7559C37.8615 34.7559 37.9914 27.9848 37.9914 27.9848V26.1816C37.9914 26.1816 37.8563 32.9527 26.9852 32.9527Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 29.388C16.1141 29.388 15.4957 36.7047 15.4957 36.7047C15.4957 36.7047 14.8825 29.388 4.00622 29.388C-6.87008 29.388 -7 22.6169 -7 22.6169V24.4201C-7 24.4201 -6.86488 31.1912 4.00622 31.1912C14.8773 31.1912 15.4957 38.5079 15.4957 38.5079C15.4957 38.5079 16.1089 31.1912 26.9852 31.1912C37.8615 31.1912 37.9914 24.4201 37.9914 24.4201V22.6169C37.9914 22.6169 37.8563 29.388 26.9852 29.388Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M37.9992 19.0571V20.8603C37.9992 20.8603 37.8589 27.6314 26.993 27.6314C24.3324 27.6314 22.2902 28.0731 20.7156 28.7278C19.2398 29.3514 18.1745 30.1725 17.4158 31.0091C15.675 32.9266 15.5035 34.9481 15.5035 34.9481C15.5035 34.9481 15.2957 32.5109 13.0352 30.4479C12.2245 29.71 11.154 29.024 9.73018 28.5096C8.23878 27.9743 6.36804 27.6314 4.01402 27.6314C-6.85708 27.6314 -6.99219 20.8603 -6.99219 20.8603V19.0571C-6.99219 19.0571 -6.85708 25.823 4.01402 25.823C6.36804 25.823 8.23878 26.166 9.73018 26.7012C11.154 27.2156 12.2245 27.9016 13.0352 28.6395C15.2957 30.6973 15.5035 33.1397 15.5035 33.1397C15.5035 33.1397 15.675 31.1182 17.4158 29.2007C18.0446 28.5044 18.8813 27.8236 19.9881 27.2572C20.2168 27.1377 20.461 27.0286 20.7104 26.9246C22.285 26.2595 24.3272 25.823 26.9878 25.823C37.8589 25.823 37.994 19.0571 37.994 19.0571H37.9992Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 22.2637C16.1141 22.2637 15.4957 29.5804 15.4957 29.5804C15.4957 29.5804 14.8825 22.2637 4.00622 22.2637C-6.87008 22.2637 -7 15.4927 -7 15.4927V17.2959C-7 17.2959 -6.86488 24.0669 4.00622 24.0669C14.8773 24.0669 15.4957 31.3836 15.4957 31.3836C15.4957 31.3836 16.1089 24.0669 26.9852 24.0669C37.8615 24.0669 37.9914 17.2959 37.9914 17.2959V15.4927C37.9914 15.4927 37.8563 22.2637 26.9852 22.2637Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M37.9992 11.9329V13.7361C37.9992 13.7361 37.8589 20.5019 26.993 20.5019C16.1271 20.5019 15.5035 27.8186 15.5035 27.8186C15.5035 27.8186 15.2957 25.3814 13.0352 23.3184C12.2245 22.5805 11.154 21.8946 9.73018 21.3801C8.23878 20.8449 6.36804 20.5019 4.01402 20.5019C-6.85708 20.5019 -6.99219 13.7361 -6.99219 13.7361V11.9329C-6.99219 11.9329 -6.85708 18.7039 4.01402 18.7039C6.36804 18.7039 8.23878 19.0469 9.73018 19.5821C11.154 20.0966 12.2245 20.7825 13.0352 21.5204C15.2957 23.5783 15.5035 26.0154 15.5035 26.0154C15.5035 26.0154 16.1219 18.7039 26.993 18.7039C37.8641 18.7039 37.9992 11.9329 37.9992 11.9329Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 15.1392C16.1141 15.1392 15.4957 22.4559 15.4957 22.4559C15.4957 22.4559 14.8825 15.1392 4.00622 15.1392C-6.87008 15.1392 -7 8.36816 -7 8.36816V10.1714C-7 10.1714 -6.86488 16.9424 4.00622 16.9424C14.8773 16.9424 15.4957 24.2591 15.4957 24.2591C15.4957 24.2591 16.1089 16.9424 26.9852 16.9424C37.8615 16.9424 37.9914 10.1714 37.9914 10.1714V8.36816C37.9914 8.36816 37.8563 15.1392 26.9852 15.1392Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M37.9992 4.81372V6.61691C37.9992 6.61691 37.8589 13.388 26.993 13.388C16.1271 13.388 15.5035 20.7046 15.5035 20.7046C15.5035 20.7046 15.2957 18.2675 13.0352 16.2045C12.2245 15.4666 11.154 14.7806 9.73018 14.2662C8.23878 13.7309 6.36804 13.388 4.01402 13.388C-6.85708 13.388 -6.99219 6.61691 -6.99219 6.61691V4.81372C-6.99219 4.81372 -6.85708 11.5796 4.01402 11.5796C6.36804 11.5796 8.23878 11.9225 9.73018 12.4578C11.154 12.9722 12.2245 13.6582 13.0352 14.3961C15.2957 16.4539 15.5035 18.8963 15.5035 18.8963C15.5035 18.8963 16.1219 11.5796 26.993 11.5796C37.8641 11.5796 37.9992 4.81372 37.9992 4.81372Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 8.01983C16.1141 8.01983 15.4957 15.3365 15.4957 15.3365C15.4957 15.3365 14.8825 8.01983 4.00622 8.01983C-6.87008 8.01983 -7 1.24878 -7 1.24878V3.05197C-7 3.05197 -6.86488 9.82302 4.00622 9.82302C14.8773 9.82302 15.4957 17.1397 15.4957 17.1397C15.4957 17.1397 16.1089 9.82302 26.9852 9.82302C37.8615 9.82302 37.9914 3.05197 37.9914 3.05197V1.24878C37.9914 1.24878 37.8563 8.01983 26.9852 8.01983Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M17.408 7.83279V9.63598C15.6672 11.5535 15.4957 13.5749 15.4957 13.5749C15.4957 13.5749 15.2878 11.1378 13.0274 9.07475C12.2167 8.33685 11.1462 7.65092 9.72239 7.13646C8.23099 6.60122 6.36024 6.25825 4.00622 6.25825C-6.86488 6.25825 -7 -0.507617 -7 -0.507617V-2.31079C-7 -2.31079 -6.86488 4.46026 4.00622 4.46026C6.41221 4.46026 8.31931 4.81881 9.82111 5.37484C11.193 5.8841 12.2375 6.55445 13.0274 7.27676C15.2878 9.33978 15.4957 11.7769 15.4957 11.7769C15.4957 11.7769 15.6672 9.75551 17.408 7.838V7.83279Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M37.9974 -2.31592V-0.512728C37.9974 -0.512728 37.8571 6.25313 26.9912 6.25313C24.3306 6.25313 22.2884 6.69483 20.7139 7.35478C19.238 7.97317 18.1728 8.79422 17.4141 9.63086V7.82767C18.1676 7.00142 19.2069 6.19597 20.6567 5.57758C22.2364 4.90204 24.2994 4.45514 26.9964 4.45514C37.8675 4.45514 38.0026 -2.31592 38.0026 -2.31592H37.9974Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M17.3872 6.09728C15.6672 8.0096 15.4957 10.0103 15.4957 10.0103C15.4957 10.0103 15.2982 7.68221 13.1781 5.65557C12.4713 4.98003 11.5567 4.34085 10.3615 3.83159C8.78181 3.15085 6.70841 2.69876 4.00622 2.69876C-6.86488 2.69876 -7 -4.0723 -7 -4.0723V-5.87549C-7 -5.87549 -6.86488 0.895566 4.00622 0.895566C7.30601 0.895566 9.66002 1.57112 11.3385 2.50649C12.4817 3.14046 13.308 3.90435 13.9108 4.65265C15.3502 6.44545 15.4957 8.20706 15.4957 8.20706C15.4957 8.20706 15.6308 6.63252 16.8572 4.94365C17.1378 5.26064 17.3301 5.65037 17.3872 6.09208V6.09728Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M37.9988 -5.87541V-4.07222C37.9988 -4.07222 37.8585 2.69883 26.9926 2.69883C24.0254 2.69883 21.8221 3.24446 20.18 4.03952C18.9588 4.62673 18.0546 5.35945 17.3894 6.09735C17.3323 5.65565 17.14 5.2659 16.8594 4.94891C17.4154 4.17983 18.2001 3.39516 19.2965 2.71442C20.9958 1.66992 23.4486 0.890439 26.9874 0.890439C37.8585 0.890439 37.9936 -5.88062 37.9936 -5.88062L37.9988 -5.87541Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 -2.66912C16.1141 -2.66912 15.4957 4.64756 15.4957 4.64756C15.4957 4.64756 14.8825 -2.66912 4.00622 -2.66912C-6.87008 -2.66912 -7 -9.44019 -7 -9.44019V-7.63699C-7 -7.63699 -6.86488 -0.865933 4.00622 -0.865933C14.8773 -0.865933 15.4957 6.45075 15.4957 6.45075C15.4957 6.45075 16.1089 -0.865933 26.9852 -0.865933C37.8615 -0.865933 37.9914 -7.63699 37.9914 -7.63699V-9.44019C37.9914 -9.44019 37.8563 -2.66912 26.9852 -2.66912Z"
+                                        fill="#6B4D45" />
+                                    <path
+                                        d="M26.9852 -6.22895C16.1141 -6.22895 15.4957 1.08774 15.4957 1.08774C15.4957 1.08774 14.8825 -6.22895 4.00622 -6.22895C-6.87008 -6.22895 -7 -13 -7 -13V-11.1968C-7 -11.1968 -6.86488 -4.42576 4.00622 -4.42576C14.8773 -4.42576 15.4957 2.89093 15.4957 2.89093C15.4957 2.89093 16.1089 -4.42576 26.9852 -4.42576C37.8615 -4.42576 37.9914 -11.1968 37.9914 -11.1968V-13C37.9914 -13 37.8563 -6.22895 26.9852 -6.22895Z"
+                                        fill="#6B4D45" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_2663_3348">
+                                        <rect width="32" height="32" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                            Тройное семейное машиноместо
+                        </div>
+                    </div>
+                    <div class="parking-page__img">
+                        <img src="assets/images/parking1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer>
         <div class="container">
             <div class="footer__wrap">
                 <div class="footer__top">
@@ -674,6 +734,9 @@
             </ul>
         </div>
     </div>
+    <script>
+
+    </script>
     <script src="assets/js/animation.js"></script>
     <script src="assets/js/app.js"></script>
 
