--- a/news.html
+++ b/news.html
@@ -64,12 +64,7 @@
                     <a href="" class="header__choose-btn">
                         Выбрать квартиру
                     </a>
-                    <button class="header__burger">
-                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 1H20" stroke="white" />
-                            <path d="M0 9H20" stroke="white" />
-                        </svg>
-                    </button>
+                    <button class="header__burger"></button>
                 </div>
             </div>
         </div>
@@ -236,7 +231,7 @@
             </div>
         </div>
     </section>
-    <footer>
+        <footer>
         <div class="container">
             <div class="footer__wrap">
                 <div class="footer__top">
@@ -749,9 +744,35 @@
             </div>
         </div>
     </div>
-
-    <script src="assets/js/app.js"></script>
+    <div class="mobile-menu">
+        <div class="mobile-menu__wrap">
+            <ul>
+                <li>
+                    <a href="">
+                        Квартиры
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        видеоматериалы
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        новости и акции
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        контакты
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="assets/js/animation.js"></script>
+    <script src="assets/js/app.js"></script>
+
 </body>
 
 </html>
